force-app/main/default/objects/TrainingWorkOrder__c/TrainingWorkOrder__c.object-meta.xml
<CustomObject>
    <label>Training Work Order</label>
    <pluralLabel>Training Work Orders</pluralLabel>
    <nameField>
        <label>Training Work Order Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>