force-app/main/default/objects/TrainingWorkOrder__c/fields/DepositAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositAmount__c</fullName>
    <label>Deposit Amount</label>
    <type>Number</type>
    <precision>18</precision><scale>2</scale>
</CustomField>