force-app/main/default/objects/TrainingWorkOrder__c/fields/OutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmount__c</fullName>
    <label>Outstanding Amount</label>
    <type>Number</type>
    <precision>18</precision><scale>2</scale>
</CustomField>